package com.paymybuddy.models;

public enum Currency {
  USD, EUR // add other currencies as needed
}